--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@ng-icons/core": "^30.2.0",
+    "@ng-icons/heroicons": "^30.2.0",
+    "@splidejs/splide": "^4.1.4",
+    "motion": "^12.4.1",
+    "rough-notation": "^0.5.1",
     "rxjs": "~7.8.0",
+    "three": "^0.173.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -27,6 +37,7 @@
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.173.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
