--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-icons/core": "^30.2.0",
     "@ng-icons/heroicons": "^30.2.0",
     "@splidejs/splide": "^4.1.4",
+    "gh-pages": "^6.3.0",
     "motion": "^12.4.1",
     "rough-notation": "^0.5.1",
     "rxjs": "~7.8.0",
@@ -38,7 +39,6 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/three": "^0.173.0",
-    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
